# notes

nose/: .env  main.py  pyproject.toml
nose/controllers/: UserControllers.py
nose/src/: main.py
nose/src/database/: usuarios.sql
nose/src/models/: TareaModel.py  UsuariosModel.py  dataBase.py  schemas.py  tareas.py  users.py
nose/src/nose.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
nose/src/view/: loginView.py  main.py
